--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
-    <string name="app_name">MyCampus</string>
+    <string name="app_name">My Application</string>
+    <string name="login_button">登录</string>
+    <string name="register_button">注册</string>
+    <string name="username_text">账号</string>
+    <string name="password_text">密码</string>
 </resources>
